fix: memory leaks y optimización del ciclo de vida